2002-01-18  Nick Drochak  <ndrochak@gol.com>

	* makefile: remove path to beta2 csc.exe.  path to csc.exe must be in PATH instead.
	don't generate xml from corcompare for now.  it throws an error on v1.0 of .NET

2002-01-17  Nick Drochak  <ndrochak@gol.com>

	* IFaceDisco.cs, XMLUtil.cs: Added new files for interface discovery tool.
	* makefile: added target for IFaceDisco.exe and added to clean target for same

2002-01-08  John Barnette <jbarn@httcb.net>

	* Removed todo.cs and related makefile data.



2002-01-07  John Barnette <jbarn@httcb.net>

	

	* makefile: added todo target, fixed EnumCheck target, simplified clean

	
	* todo.cs: new file.  generates todo list XML and compares assemblies



2002-01-07  Gaurav Vaish <gvaish@iitk.ac.in>

	* EnumCheck.cs:  Get the numerical values of an enumeration.

2002-01-06  Nick Drochak  <ndrochak@gol.com>

	* corcompare.cs: Catch the FileNotFoundException and handle it nicely.

2002-01-05  Nick Drochak  <ndrochak@gol.com>

	* makefile: build corcompare
	* corcompare.cs: add new file.  compares an assembly with mscorlib