@@ -1,3 +1,8 @@
+2002-01-19  Nick Drochak  <ndrochak@gol.com>
+
+	* makefile: corcompare works again now, so make xml of missing types
+	* CorCompare.cs: use exception that .NET v1 throws to get types in mono corlib
+
 2002-01-18  Nick Drochak  <ndrochak@gol.com>
 
 	* makefile: remove path to beta2 csc.exe.  path to csc.exe must be in PATH instead.
